--- a/templates/allMovies.html
+++ b/templates/allMovies.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css"
+    href="{{ url_for('static', filename='style.css') }}"/>
 <a href="{{url_for('home')}}">HOME</a>
 <h2>All {{year}}</h2>
 <ul>
