--- a/templates/averageMovies.html
+++ b/templates/averageMovies.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css"
+    href="{{ url_for('static', filename='style.css') }}"/>
 <a href="{{url_for('home')}}">HOME</a>
 <h2>Average Score of {{year}}</h2>
 <p>MetaScore: {{result[0]}}</p>
