--- a/templates/highestMovies.html
+++ b/templates/highestMovies.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css"
+    href="{{ url_for('static', filename='style.css') }}"/>
 <a href="{{url_for('home')}}">HOME</a>
 <h2>Highest Score Movie for {{year}}</h2>
 <br>
