--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css"
+    href="{{ url_for('static', filename='style.css') }}"/>
 <h2> Show All Movies</h2>
 <ul>
 {% for year in years %}
